--- a/Develop/index.html
+++ b/Develop/index.html
@@ -9,17 +9,17 @@
               <!-- Bootstrap CSS -->
               <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
           
-              <title>Hello, Good README</title>
+              <title>Hello, t</title>
             </head>
             <body>
-              <h1>When creating an open source project on GitHub, it is important to have a quality README with information about the app--what is the app for, how to use the app, how to install it, how to report issues, and how to make contributions so that other developers are more likely to use and contribute to the success of the project. A command-line application will allow for quick and easy generation of a project README to get started quickly. This will allow a project creator to spend more time working on finishing the project and less time creating a good README.</h1>
-              <button class="btn primary"><a>www.github.com/run npm install</a><button>
-              <h2>A README is a text file that introduces and explains a project. Definitely before you show a project to other people or make it public. In the top level directory of the project.</h2>
+              <h1>t</h1>
+              <button class="btn primary"><a>www.github.com/t</a><button>
+              <h2>t</h2>
               <h2>MIT</h2>
-              <h2>Caren Braj</h2>
-              <h2>Test</h2>
-              <h2>carenbraj</h2>
-              <h2>carenbraj</h2>
+              <h2>t</h2>
+              <h2>t</h2>
+              <h2>t</h2>
+              <h2>t</h2>
           
               <!-- Optional JavaScript -->
               <!-- jQuery first, then Popper.js, then Bootstrap JS -->
